hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_nested_with_async_closure_1.php
<?hh

async function f() {
  concurrent {
    async {
      concurrent {
        await g();
        await h();
      }
    };
    await f();
  }
}
